--- a/index.html
+++ b/index.html
@@ -6,6 +6,47 @@
 	<link rel="stylesheet" href="css/puls4.css">
 </head>
 <body>
-	Hola
+	<header>
+		<div class="logo">
+			<img src="imagenes/logo.png" alt="puls4" />
+		</div>
+		<div class="titular">
+		<h1 class="titulo">
+				Puls4: comunidad profesional de gente atractiva
+		</h1>
+		<div>
+			<a class="filtro" href="#">
+				Responsive Desing
+			</a>
+			<a class="publicar" href="#">
+				Responsive Desing
+			</a>
+		</div>
+		</div>
+		<div class="usuario">
+			<figure class="avatar">
+				<img src="imagenes/avatar.jpg" alt="uno" />
+			</figure>
+			<a class="flechita" href="#" >
+				x
+			</a>
+		</div>
+	</header>
+	<nav>
+		
+	</nav>
+	<section>
+		
+	</section>
+	<footer>
+		<h3 class="powered">
+			<strong>
+				Powered by Krtpowa
+			</strong>
+			<span class="mejor">
+				mejorando.la
+			</span>
+		</h3>
+	</footer>
 </body>
 </html>
