--- a/index.html
+++ b/index.html
@@ -3,25 +3,26 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Puls4: Comunidad para gente atractiva y millonaria</title>
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/puls4.css">
 </head>
 <body>
 	<header>
-		<div class="logo">
+		<div class="logo left">
 			<img src="imagenes/logo.png" alt="puls4" />
 		</div>
 		<div class="titular">
-		<h1 class="titulo">
+			<h1 class="titulo">
 				Puls4: comunidad profesional de gente atractiva
-		</h1>
-		<div>
-			<a class="filtro" href="#">
-				Responsive Desing
-			</a>
-			<a class="publicar" href="#">
-				Responsive Desing
-			</a>
-		</div>
+			</h1>
+			<div>
+				<a class="filtro" href="#">
+					Responsive Desing
+				</a>
+				<a class="publicar" href="#">
+					Responsive Desing
+				</a>
+			</div>
 		</div>
 		<div class="usuario">
 			<figure class="avatar">
